feat: add handling jobs in tests
